; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xmlrpc.c_XMLRPC_SetValueDateTime.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xmlrpc.c_XMLRPC_SetValueDateTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@xmlrpc_datetime = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @XMLRPC_SetValueDateTime(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [30 x i8], align 16
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = icmp ne %struct.TYPE_4__* %6, null
  br i1 %7, label %8, label %27

8:                                                ; preds = %2
  %9 = load i32, i32* @xmlrpc_datetime, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = getelementptr inbounds [30 x i8], [30 x i8]* %5, i64 0, i64 0
  store i8 0, i8* %15, align 16
  %16 = load i32, i32* %4, align 4
  %17 = getelementptr inbounds [30 x i8], [30 x i8]* %5, i64 0, i64 0
  %18 = call i32 @date_to_ISO8601(i32 %16, i8* %17, i32 30)
  %19 = getelementptr inbounds [30 x i8], [30 x i8]* %5, i64 0, i64 0
  %20 = load i8, i8* %19, align 16
  %21 = icmp ne i8 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %24 = getelementptr inbounds [30 x i8], [30 x i8]* %5, i64 0, i64 0
  %25 = call i32 @XMLRPC_SetValueDateTime_ISO8601(%struct.TYPE_4__* %23, i8* %24)
  br label %26

26:                                               ; preds = %22, %8
  br label %27

27:                                               ; preds = %26, %2
  ret void
}

declare dso_local i32 @date_to_ISO8601(i32, i8*, i32) #1

declare dso_local i32 @XMLRPC_SetValueDateTime_ISO8601(%struct.TYPE_4__*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
